target/debug/build/crossbeam-utils-8a4a97d223cabe56/stderr
error[E0412]: cannot find type `AtomicU128` in module `core::sync::atomic`
 --> <anon>:1:38
  |
1 |   pub type Probe = core::sync::atomic::AtomicU128;
  |                                        ^^^^^^^^^^ help: a struct with a similar name exists: `AtomicU16`
 --> /rustc/05f9846f893b09a1be1fc8560e33fc3c815cfecb/library/core/src/sync/atomic.rs:3494:1
 ::: /rustc/05f9846f893b09a1be1fc8560e33fc3c815cfecb/library/core/src/sync/atomic.rs:3511:1
  |
  = note: similarly named struct `AtomicU16` defined here

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0412`.
